--- a/client/src/components/Message.css
+++ b/client/src/components/Message.css
@@ -21,7 +21,7 @@
 
 .messageText {
     background: white;
-    border-radius: 0.5rem;
+    border-radius: 0.7rem;
     padding: 0.5rem;
 }
 
